Implemented *every* *single* feedback of the rendu intermediare (except some that didn't even apply lol)
Also fixed the conceptional error of hunting trap yey
I will do unspeakable things to the assistant that corrected GameState (for legal reasons this is a joke)